# mpibind

./: Makefile.am  configure.ac  scr.py  set_env.sh  temp.py
config/: am_check_pymod.m4  tap-driver.py
python/: Makefile.am  README.md  mpibind.py.in  mpibind_example.py
slurm/: Makefile.am  README.md  plugin.c
src/: hwloc_tests  main
test-suite/: Makefile.am
test-suite/python/: py-coral-ea.py  py-error.py
